--- a/css/style.css
+++ b/css/style.css
@@ -583,6 +583,9 @@ body {
   padding: 10rem 0;
   font-size: 1.4rem;
   color: #f7f7f7; }
+  @media (max-width: 75em) {
+    .footer {
+      padding: 8rem 0; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 4rem; }
@@ -594,6 +597,10 @@ body {
     border-top: 1px solid #777;
     padding: 2rem;
     display: inline-block; }
+    @media (max-width: 56.25em) {
+      .footer__navigation {
+        width: 100%;
+        text-align: center; } }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -617,6 +624,10 @@ body {
     width: 80%;
     text-align: left;
     float: right; }
+    @media (max-width: 56.25em) {
+      .footer__copyright {
+        width: 100%;
+        float: right; } }
 
 .row {
   max-width: 114rem;
