--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,6 +4,10 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
 
+    @include respond(tab-land) {
+        padding: 8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 4rem;
@@ -19,6 +23,11 @@
         border-top: 1px solid $color-grey-dark;
         padding: 2rem;
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -59,5 +68,10 @@
         width: 80%;
         text-align: left;
         float: right;
+
+        @include respond(tab-port) {
+            width: 100%;
+            float: right;
+        }
     }
 }
