--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -8,6 +8,9 @@
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: all 0.2s;
     
+    @include respond(tab-port) {
+       padding: 2rem;
+    }
 
     &__icon {
         font-size: 6rem;
@@ -18,6 +21,11 @@
         background-clip: text;
         -webkit-background-clip: text;
         color: transparent;
+
+        @include respond(tab-port) {
+            margin-bottom: 0;
+         }
+     
     }
 
     &:hover {
