--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,7 +10,11 @@
 
     &__logo-box {
         text-align: center;
-        margin-bottom: 4rem;
+        margin-bottom: 8rem;
+
+        @include respond(tab-port) {
+            margin-bottom: 6rem;
+        }
     }
 
     &__logo {
@@ -71,7 +75,7 @@
 
         @include respond(tab-port) {
             width: 100%;
-            float: right;
+            float: none;
         }
     }
 }
