--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,7 @@ body {
         left: 0%;
         transform: translate(0);
         width: 100%;
-        padding: 4rem; }
+        padding: 7rem 4rem 4rem 4rem; }
       .card__price-box {
         color: #fff; }
       .card__price-value {
